--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before-install:
- - docker build -t vd1234/docker-react -f Dockerfile.dev .
+ - 
 
 script:
-  -  docker run vd1234/docker-react npm run test -- --coverage
+  - docker run -e CI=true vd1234/docker-react npm run test
