--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before-install:
- - 
+ - docker build -t vd1234/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true vd1234/docker-react npm run test
