--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,17 @@ before-install:
 
 script:
   - docker run -e CI=true vd1234/docker-react npm run test
+
+deploy:
+
+  provider:  elasticbeanstalk
+  region: "us-west-2"
+  app: docker-react
+  env: "docker-env"
+  bucket_name: "elasticbeanstalk-us-west-2-224345200361"
+  bucket_path : "docker-react"
+  on:
+    branch: master
+
+  access_key_id: $AWS-ACCESS-KEY
+  secret_access_key: "$aws-secret-key"
