--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
   on:
     branch: master
 
-  access_key_id: $AWS-ACCESS-KEY
-  secret_access_key: "$aws-secret-key"
+  access_key_id: $AWS_ACCESS_KEY 
+  secret_access_key: "$SECRET_ACCESS_KEY "
