Added travis files

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ deploy:
 
   provider:  elasticbeanstalk
   region: "us-west-2"
-  app: docker-react
-  env: "docker-env"
+  app: "docker-react"
+  env: " Dockerreact-env"
   bucket_name: "elasticbeanstalk-us-west-2-224345200361"
   bucket_path : "docker-react"
   on:
     branch: master
 
-  access_key_id: $AWS_ACCESS_KEY 
-  secret_access_key: "$SECRET_ACCESS_KEY "
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
