Added travis files

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
   bucket_name: "elasticbeanstalk-us-west-2-224345200361"
   bucket_path : "docker-react"
   on:
-    branch: master
+    branch: main
 
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
